Fixed explore section list alignment

--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -152,6 +152,7 @@ a {
     color: #fff;
     font-weight: var(--fw-900);
     transition: text-decoration 700ms ease-in-out;
+    will-change: text-decoration;
 }
 
 a:hover {
@@ -164,10 +165,11 @@ button {
     background: #fff;
     outline: 2px solid var(--clr-black);
     padding: .65rem;
-    box-shadow: 10px 10px 5px black;
+    box-shadow: 10px 10px black;
     transition: 100ms 20ms ease-in-out;
     max-width: 16rem;
     transition-property: transform, box-shadow, background;
+    will-change: transform, box-shadow, background;
 }
 
 button:hover {
@@ -175,7 +177,7 @@ button:hover {
 }
 
 button:active {
-    box-shadow: -2px -2px 1px black;
+    box-shadow: -2px -2px black;
     transform: translateX(8px) translateY(8px);
 }
 
@@ -292,6 +294,10 @@ header>nav>ul>ul {
     position: relative;
     border-bottom: 1px solid #000;
     padding: .75rem;
+}
+
+.explore-nav>li:first-of-type {
+    padding-block-start: 0;
 }
 
 .explore-nav>li .fas {
